# hermit

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.cursor/commands/: branch-pr.md
.cursor/rules/: agent-communication.mdc  code-review.mdc  critical-rules.mdc  grug.mdc  project-setup.mdc  python-conventions.mdc  testing.mdc
.github/: CONTRIBUTING.md  pull_request_template.md  settings.yml
.github/workflows/: ci.yml  codeql.yml  evals.yml  semantic-pr.yml
docs/: agent-navigation.md  architecture.md  issues-and-fixes-reddit-rag.md  ollama.md  rag-retrieval.md
docs/adr/: 001-vector-store-chromadb.md  002-embedding-model-nomic-embed-text.md  003-agent-framework-anthropic-tool-use.md  004-structural-chunking.md  005-hybrid-retrieval.md  006-freshness-decay.md
evals/: dataset.json  run_evals.py
hermit/: config.py  logging_config.py  settings.py
hermit/api/: dependencies.py  exceptions.py  main.py  middleware.py  repository.py  schemas.py  service.py
hermit/cli/: app.py
hermit/ingestion/: chunker.py  embedder.py  loader.py  service.py
hermit/ollama/: schemas.py
hermit/rag/: engine.py  retriever.py
hermit/storage/: vector_store.py
infra/prometheus/: prometheus.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
localrag/: logging_config.py  metrics.py  settings.py
localrag/agent/: service.py
localrag/api/: dependencies.py  exceptions.py  main.py  middleware.py  repository.py  schemas.py  service.py
localrag/cli/: app.py
localrag/ingestion/: chunker.py  embedder.py  loader.py  service.py  structural_chunker.py
localrag/llm/: costs.py  factory.py  types.py
scripts/: run_integration_tests.py
tests/: conftest.py  test_agent.py  test_api.py  test_api_dependencies.py  test_api_main_exceptions.py  test_api_service.py  test_bm25_index.py  test_embedder.py  test_freshness_decay.py  test_ingestion.py  test_ingestion_service.py  test_llm_costs.py  test_llm_providers.py  test_logging_config.py  test_ollama_schemas.py  test_parsers_and_loader.py  test_rag_engine.py  test_rag_prompt.py  test_retriever.py  test_retriever_hybrid.py  test_structural_chunker.py  test_vector_store.py
(+43 files in other folders)
